--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
@@ -9,5 +9,8 @@
 
         <key alias="copyAllBlocks">Copy all blocks</key>
         <key alias="editRawValue">Edit raw value</key>
+
+        <key alias="copyContentBlock">Copy content block</key>
+        <key alias="createContentTemplate">Create content template...</key>
     </area>
 </language>
