[WIP] Added Property Actions for ContentBlocks
Feature for "Copy all blocks"

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
@@ -6,5 +6,7 @@
     </creator>
     <area alias="contentment">
         <key alias="name">Contentment</key>
+
+        <key alias="copyAllBlocks">Copy all blocks</key>
     </area>
 </language>
