[WIP] Reworked "Dev Mode" tool to be a Property Action
This fits in more neatly than having extra UI actions on the editor itself.

Removed the directive implementation.

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
@@ -8,5 +8,6 @@
         <key alias="name">Contentment</key>
 
         <key alias="copyAllBlocks">Copy all blocks</key>
+        <key alias="editRawValue">Edit raw value</key>
     </area>
 </language>
