--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
@@ -7,6 +7,10 @@
     <area alias="contentment">
         <key alias="name">Contentment</key>
 
+        <!-- Content Blocks -->
+        <key alias="configureDisplayMode">Select and configure a display mode</key>
+        <key alias="configureElementType">Select and configure an element type</key>
+
         <key alias="copyAllBlocks">Copy all blocks</key>
         <key alias="editRawValue">Edit raw value</key>
 
