Preview for Data List editor
When configuring the data-type, a preview panel will appear
at the bottom, displaying the rendered list-editor and a table
of the data-source items.

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/da.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/da.xml
@@ -24,6 +24,9 @@
         <!-- Data List -->
         <key alias="configureDataSource">Vælg og konfigurer en datakilde</key>
         <key alias="configureListEditor">Vælg og konfigurer en liste</key>
+        <key alias="configurePreviewInit">Vælg og konfigurer en datakilde og en listeeditor, tak.</key>
+        <key alias="configurePreviewDataSource">Vælg og konfigurer en datakilde, tak.</key>
+        <key alias="configurePreviewListEditor">Vælg og konfigurer en liste, tak.</key>
 
     </area>
 </language>
