--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/pt-br.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/pt-br.xml
@@ -24,6 +24,9 @@
         <!-- Data List -->
         <key alias="configureDataSource">Selecionar e configurar a origem dos dados</key>
         <key alias="configureListEditor">Selecionar e configurar o editor de lista</key>
+        <key alias="configurePreviewInit">Selecionar e configurar a origem dos dados e o editor de lista, por favor.</key>
+        <key alias="configurePreviewDataSource">Selecionar e configurar a origem dos dados, por favor.</key>
+        <key alias="configurePreviewListEditor">Selecionar e configurar o editor de lista, por favor.</key>
 
     </area>
 </language>
