--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/en.xml
@@ -7,6 +7,10 @@
     <area alias="contentment">
         <key alias="name">Contentment</key>
 
+        <!-- General -->
+        <key alias="removeItemMessage">Are you sure you want to remove this item?</key>
+        <key alias="removeItemButton">Yes, remove</key>
+
         <!-- Content Blocks -->
         <key alias="configureDisplayMode">Select and configure a display mode</key>
         <key alias="configureElementType">Select and configure an element type</key>
