--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/pt-br.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/lang/pt-br.xml
@@ -5,7 +5,11 @@
         <link>https://github.com/RenanOD</link>
     </creator>
     <area alias="contentment">
-        <key alias="name">Contentamento</key>
+        <key alias="name">Contentment</key>
+
+        <!-- General -->
+        <key alias="removeItemMessage">Are you sure you want to remove this item?</key>
+        <key alias="removeItemButton">Yes, remove</key>
 
         <!-- Content Blocks -->
         <key alias="configureDisplayMode">Selecionar e configurar o modo de exibição</key>
