Revert "DataList Preview - refactored"
Further testing raised issues.

This reverts commit 9464e00377b5397b9d73fda46d9ae09be2b6c7c8.

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/en.xml
@@ -28,6 +28,7 @@
         <!-- Data List -->
         <key alias="configureDataSource">Select and configure a data source</key>
         <key alias="configureListEditor">Select and configure a list editor</key>
+        <key alias="configurePreviewInit">Please select and configure a data source and list editor.</key>
         <key alias="configurePreviewDataSource">Please select and configure a data source.</key>
         <key alias="configurePreviewListEditor">Please select and configure a list editor.</key>
         <key alias="configurePreviewNoItems">The data source returned no items to preview.</key>
