CheckboxList - refactored check/uncheck-all localization
- Used `localizationService` in controller to get the labels
- Made the localization keys shorter
- Added translations for Danish and Portuguese (using Google Translate)

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/da.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/da.xml
@@ -29,6 +29,9 @@
         <key alias="configurePreviewListEditor">Vælg og konfigurer en liste, tak.</key>
         <key alias="configurePreviewNoItems">Datakilden returnerede ingen elementer til forhåndsvisning.</key>
 
+        <key alias="checkboxListCheckAll">Tjek alle</key>
+        <key alias="checkboxListUncheckAll">Fjern markeringen af ​​alle</key>
+
         <key alias="tagsType">Indtast nøgleord (tryk på Enter efter hvert nøgleord)...</key>
     </area>
 </language>
