--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/pt-br.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/pt-br.xml
@@ -29,6 +29,9 @@
         <key alias="configurePreviewListEditor">Selecionar e configurar o editor de lista, por favor.</key>
         <key alias="configurePreviewNoItems">A fonte de dados não retornou nenhum item para visualização.</key>
 
+        <key alias="checkboxListCheckAll">Verificar tudo</key>
+        <key alias="checkboxListUncheckAll">Desmarcar todos</key>
+
         <key alias="tagsType">Digite para selecionar um item...</key>
     </area>
 </language>
