--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/fr.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/fr.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<language alias="en" intName="English (UK)" localName="English (UK)" lcid="" culture="en-GB">
+<language alias="fr" intName="French" localName="Français" lcid="" culture="fr">
     <creator>
-        <name>Lee Kelleher</name>
-        <link>https://leekelleher.com</link>
+        <name>Michaël Latouche</name>
+        <link>https://github.com/mikecp</link>
     </creator>
     <area alias="contentment">
         <key alias="name">Contentment</key>
 
         <!-- General -->
-        <key alias="removeItemMessage">Etes vous certain.e de vouloir supprimer cet élément?</key>
+        <key alias="removeItemMessage">Etes-vous certain.e de vouloir supprimer cet élément?</key>
         <key alias="removeItemButton">Oui, supprimer</key>
 
         <!-- Configuration Editor -->
@@ -19,7 +19,7 @@
         <key alias="configureDisplayMode">Sélectionnez et configurez un mode d'affichage</key>
         <key alias="configureElementType">Sélectionnez et configurez un type d'élément</key>
 
-        <key alias="copyAllBlocks">Copier touts les blocs</key>
+        <key alias="copyAllBlocks">Copier tous les blocs</key>
         <key alias="editRawValue">Modifier la valeur brute</key>
 
         <key alias="copyContentBlock">Copier le bloc de contenu</key>
@@ -28,7 +28,7 @@
         <!-- Data List -->
         <key alias="configureDataSource">Sélectionnez et configurez une source de données</key>
         <key alias="configureListEditor">Sélectionnez et configurez un éditeur de liste</key>
-        <key alias="configurePreviewInit">Veuillez sélectionner et configurer une source de donnée et un éditeur de liste.</key>
+        <key alias="configurePreviewInit">Veuillez sélectionner et configurer une source de données et un éditeur de liste.</key>
         <key alias="configurePreviewDataSource">Veuillez sélectionner et configurer une source de données.</key>
         <key alias="configurePreviewListEditor">Veuillez sélectionner et configurer un éditeur de liste.</key>
         <key alias="configurePreviewNoItems">La source de données n'a retourné aucun élément à prévisualiser.</key>
