--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/pt-br.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/pt-br.xml
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language alias="pt" intName="Portuguese (BR)" localName="Português (BR)" lcid="" culture="pt-BR">
     <creator>
-        <name>Renan Domingues</name>
+        <name>Renan Domingues, Leonardo Bottaro</name>
         <link>https://github.com/RenanOD</link>
     </creator>
     <area alias="contentment">
         <key alias="name">Contentment</key>
 
         <!-- General -->
-        <key alias="removeItemMessage">Are you sure you want to remove this item?</key>
-        <key alias="removeItemButton">Yes, remove</key>
+        <key alias="removeItemMessage">Tem certeza que deseja remover este item?</key>
+        <key alias="removeItemButton">Sim, remover</key>
+
+        <!-- Configuration Editor -->
+        <key alias="missingItemName">Este item não está mais disponível</key>
+        <key alias="missingItemDescription">Por favor remova esta configuração e selecione outro item.</key>
 
         <!-- Content Blocks -->
         <key alias="configureDisplayMode">Selecionar e configurar o modo de exibição</key>
@@ -22,14 +26,14 @@
         <key alias="createContentTemplate">Criar modelo de conteúdo...</key>
 
         <!-- Data List -->
-        <key alias="configureDataSource">Selecionar e configurar a origem dos dados</key>
-        <key alias="configureListEditor">Selecionar e configurar o editor de lista</key>
-        <key alias="configurePreviewInit">Selecionar e configurar a origem dos dados e o editor de lista, por favor.</key>
-        <key alias="configurePreviewDataSource">Selecionar e configurar a origem dos dados, por favor.</key>
-        <key alias="configurePreviewListEditor">Selecionar e configurar o editor de lista, por favor.</key>
+        <key alias="configureDataSource">Selecionar e configurar uma origem de dados</key>
+        <key alias="configureListEditor">Selecionar e configurar um editor de lista</key>
+        <key alias="configurePreviewInit">Por favor selecione e configure uma origem de dados e um editor de lista.</key>
+        <key alias="configurePreviewDataSource">Por favor selecione e configure uma origem de dados.</key>
+        <key alias="configurePreviewListEditor">Por favor selecione e configure um editor de lista.</key>
         <key alias="configurePreviewNoItems">A fonte de dados não retornou nenhum item para visualização.</key>
 
-        <key alias="checkboxListCheckAll">Verificar tudo</key>
+        <key alias="checkboxListCheckAll">Marcar todos</key>
         <key alias="checkboxListUncheckAll">Desmarcar todos</key>
 
         <key alias="tagsType">Digite para selecionar um item...</key>
