Renamed "pt-br.xml" to "pt.xml"
The localizations try to be as generic as
possible between Portugal and Brazil Portuguese.
ref: https://github.com/leekelleher/umbraco-contentment/pull/277#issuecomment-1286097196

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/pt.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/pt.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<language alias="pt" intName="Portuguese (BR)" localName="Português (BR)" lcid="" culture="pt-BR">
+<language alias="pt" intName="Portuguese" localName="Português" lcid="" culture="pt">
     <creator>
         <name>Renan Domingues, Leonardo Bottaro</name>
         <link>https://github.com/RenanOD</link>
