ContentBlocks - support for "disabled" blocks
e.g. if the underlying Element Type is removed.

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/en.xml
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/Lang/en.xml
@@ -25,6 +25,8 @@
         <key alias="copyContentBlock">Copy content block</key>
         <key alias="createContentTemplate">Create content template...</key>
 
+        <key alias="missingElementType">This content is not supported for this configuration.</key>
+
         <!-- Data List -->
         <key alias="labelDataSource">Data source</key>
         <key alias="labelListEditor">List editor</key>
